<?xml version="1.0"?>
<package format="2">
  <name>hydra</name>
  <version>0.0.1</version>
  <description>hydra</description>
  <maintainer email="ssarjun@umd.edu">SameerArjunS</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>